@@ -17,7 +17,6 @@ import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.util.Properties;
-import java.util.logging.Level;
 
 import org.compiere.util.DB;
 import org.compiere.util.Env;
@@ -41,17 +40,17 @@ public class SIWCalloutInvoiceCharge implements ISimpleInputWindowCallout {
 		int WindowNo = dataBinder.getSimpleInputWindow().getGridTab().getWindowNo();
 		Properties ctx = Env.getCtx();
 		int tabNo = dataBinder.getSimpleInputWindow().getGridTab().getTabNo();
-	
+
 		//	No Product defined
 		if (dataBinder.getValue(rowIndex, "M_Product_ID") != null)
 		{
 			dataBinder.setValue(rowIndex, "C_Charge_ID", null);
 			return "ChargeExclusively";
 		}
-		
+
 		dataBinder.setValue(rowIndex, "M_AttributeSetInstance_ID", null);
 		dataBinder.setValue(rowIndex, "S_ResourceAssignment_ID", null);
-		dataBinder.setValue(rowIndex, "C_UOM_ID", new Integer(100));//	EA
+		dataBinder.setValue(rowIndex, "C_UOM_ID", Integer.valueOf(100));//	EA
 
 		Env.setContext(ctx, WindowNo, "DiscountSchema", "N");
 		String sql = "SELECT ChargeAmt FROM C_Charge WHERE C_Charge_ID=?";
@@ -80,10 +79,10 @@ public class SIWCalloutInvoiceCharge implements ISimpleInputWindowCallout {
 			DB.close(rs, pstmt);
 			rs = null; pstmt = null;
 		}
-		
-		
+
+
 		return new SIWCalloutInvoiceTax().start(dataBinder, rowIndex, ColumnName, newValue, oldValue);
-		
+
 	}
 
 
