@@ -14,20 +14,17 @@
 package jpiere.plugin.simpleinputwindow.callout;
 
 import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.sql.Timestamp;
 import java.util.Properties;
 
-import jpiere.plugin.simpleinputwindow.base.ISimpleInputWindowCallout;
-import jpiere.plugin.simpleinputwindow.form.SimpleInputWindowDataBinder;
-
-import org.compiere.model.MOrderLine;
 import org.compiere.model.MPriceList;
-import org.compiere.model.MProduct;
 import org.compiere.model.MProductPricing;
-import org.compiere.model.MStorageReservation;
 import org.compiere.util.DB;
 import org.compiere.util.Env;
-import org.compiere.util.Msg;
+
+import jpiere.plugin.simpleinputwindow.base.ISimpleInputWindowCallout;
+import jpiere.plugin.simpleinputwindow.form.SimpleInputWindowDataBinder;
 
 public class SIWCalloutInvoiceProduct implements ISimpleInputWindowCallout {
 
@@ -86,7 +83,7 @@ public class SIWCalloutInvoiceProduct implements ISimpleInputWindowCallout {
 		dataBinder.setValue(rowIndex, "PriceLimit", pp.getPriceLimit());
 		dataBinder.setValue(rowIndex, "PriceActual", pp.getPriceStd());
 		dataBinder.setValue(rowIndex, "PriceEntered", pp.getPriceStd());
-		dataBinder.setValue(rowIndex, "C_UOM_ID", new Integer(pp.getC_UOM_ID()));
+		dataBinder.setValue(rowIndex, "C_UOM_ID", Integer.valueOf(pp.getC_UOM_ID()));
 		dataBinder.setValue(rowIndex, "QtyInvoiced", dataBinder.getValue(rowIndex, "QtyEntered"));
 		Env.setContext(ctx, WindowNo, "EnforcePriceLimit", pp.isEnforcePriceLimit() ? "Y" : "N");
 		Env.setContext(ctx, WindowNo, "DiscountSchema", pp.isDiscountSchema() ? "Y" : "N");
@@ -96,7 +93,7 @@ public class SIWCalloutInvoiceProduct implements ISimpleInputWindowCallout {
 		//	Line Net Amt
 		BigDecimal LineNetAmt = ((BigDecimal)dataBinder.getValue(rowIndex,"QtyEntered")).multiply(pp.getPriceStd());
 		if (LineNetAmt.scale() > StdPrecision)
-			LineNetAmt = LineNetAmt.setScale(StdPrecision, BigDecimal.ROUND_HALF_UP);
+			LineNetAmt = LineNetAmt.setScale(StdPrecision, RoundingMode.HALF_UP);
 
 		dataBinder.setValue(rowIndex, "LineNetAmt", LineNetAmt);
 
